PR Comments Resolution
Signed-off-by: Georgi Yazovaliyski <georgi.yazovaliiski@gmail.com>